<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="username_label">Username;</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_confirm_hint">Please confirm your password</string>
    <string name="random">Random</string>
</resources>
