<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/username_label"
            android:layout_weight="75"
            android:hint="@string/username_input_hint" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/password"
            android:layout_weight="75"
            android:hint="@string/password_hint" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_confirm_field"
        android:layout_below="@id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/password_confirm" />

        <EditText
            android:id="@+id/username_password_confirm_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/username_label"
            android:layout_weight="75"
            android:hint="@string/password_confirm_hint" />
    </LinearLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/username_field"
        android:layout_below="@id/password_confirm_field"
        android:text="@string/submit"
        android:textSize="24sp" />
</RelativeLayout>
